--- a/src/assets/style.less
+++ b/src/assets/style.less
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR&.css');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR:300,900&subset=korean&.css');
+
+@shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 body {
   margin: 0;
@@ -10,13 +12,12 @@ body {
 }
 
 h1 {
-  font-weight: 900;
-  color: #fff;
+  font-weight: 700;
 }
 
 .title-soo {
   position: relative;
-  width: 100vw;
+  width: 98.75vw;
   height: (100vw / 1440 * 736);
   background: url('./champ-soo.jpg') center center no-repeat;
   background-size: cover;
@@ -38,9 +39,58 @@ h1 {
 }
 
 .title-soo > h1 {
+  color: #fff;
+  max-width: 95vw;
   font-size: 48px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -100%);
+}
+
+.el-card {
+  font-size: 18px;
+}
+
+.thanks {
+  font-size: 18px;
+}
+
+.el-card h1 {
+  font-size: 36px;
+}
+
+.image {
+  max-width: 200px;
+  border-radius: 50%;
+  box-shadow: @shadow;
+}
+
+.main-text {
+  font-size: 24px;
+  font-weight: lighter;
+}
+
+hr {
+  margin: 48px 20%;
+  border-width: 0.5px;
+  border-color: #c0c4cc;
+}
+
+@media (max-width: 820px) {
+  .title-soo > h1 {
+    font-size: 32px;
+  }
+  .main-text {
+    font-size: 18px;
+  }
+  .el-card {
+    font-size: 14px;
+  }
+  .thanks {
+    font-size: 14px;
+  }
+  .el-card h1 {
+    font-size: 24px;
+  }
 }
