--- a/src/assets/style.less
+++ b/src/assets/style.less
@@ -7,7 +7,7 @@ body {
   font-family: 'Noto Sans KR', sans-serif;
   font-weight: 100;
   background-color: #000000;
-  color: #c0c4cc;
+  color: #fff;
   text-align: center;
 }
 
@@ -17,7 +17,7 @@ h1 {
 
 .title-soo {
   position: relative;
-  width: 98.75vw;
+  width: 100vw;
   height: (100vw / 1440 * 736);
   background: url('./champ-soo.jpg') center center no-repeat;
   background-size: cover;
@@ -69,12 +69,13 @@ h1 {
 .main-text {
   font-size: 24px;
   font-weight: lighter;
+  padding: 24px;
 }
 
 hr {
   margin: 48px 20%;
   border-width: 0.5px;
-  border-color: #c0c4cc;
+  border-color: #fff;
 }
 
 @media (max-width: 820px) {
