--- a/src/assets/style.less
+++ b/src/assets/style.less
@@ -11,6 +11,10 @@ body {
   text-align: center;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 h1 {
   font-weight: 700;
 }
@@ -43,7 +47,7 @@ h1 {
   max-width: 95vw;
   font-size: 48px;
   position: absolute;
-  top: 50%;
+  top: 85%;
   left: 50%;
   transform: translate(-50%, -100%);
 }
@@ -83,7 +87,8 @@ hr {
     font-size: 32px;
   }
   .main-text {
-    font-size: 18px;
+    font-size: 14px;
+    padding: 14px;
   }
   .el-card {
     font-size: 14px;
